Refactor  FieldAccessor